# py-sr25519-bindings

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.sh  pyproject.toml  requirements.txt  tests.py
.github/workflows/: CI.yml  build.yml  pypi.yml  test.yml  wheels.yml
src/: lib.rs
