[package]
name = "py-sr25519-bindings"
description = "Python bindings for sr25519 library"
authors=["Polkascan Foundation"]
version = "0.2.0"
repository = "https://github.com/polkascan/py-sr25519-bindings"
homepage = "https://github.com/polkascan/py-sr25519-bindings"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
schnorrkel = "0.10.2"

[dev-dependencies]
hex-literal = "0.3.4"

[lib]
name = "sr25519"
crate-type = ["cdylib"]

# Allows `cargo test --no-default-features` to work
# see: https://github.com/PyO3/pyo3/issues/341
[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies.pyo3]
version = "0.11.0"

[package.metadata.maturin]
maintainer = "Stichting Polkascan (Polkascan Foundation)"
maintainer-email = "legal@polkascan.org"
classifier = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
