[package]
name = "py-sr25519-bindings"
description = "Python bindings for schnorrkel RUST crate"
authors = ["Polkascan Foundation"]
version = "0.2.2"
repository = "https://github.com/polkascan/py-sr25519-bindings"
homepage = "https://github.com/polkascan/py-sr25519-bindings"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
schnorrkel = "0.11.4"

[dev-dependencies]
hex-literal = "0.4.1"

[lib]
name = "sr25519"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.20.3"
features = ["extension-module"]
