[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "py-sr25519-bindings"
version = "0.2.1"
description = "Python bindings for schnorrkel RUST crate"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {email = "info@polkascan.org"},
  {name = "Polkascan Foundation"}
]
maintainers = [
  {name = "Polkascan Foundation", email = "info@polkascan.org"}
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
repository = "https://github.com/polkascan/py-sr25519-bindings"
homepage = "https://github.com/polkascan/py-sr25519-bindings"
